# time-series-methods

./: .gitignore  CLAUDE.md  Makefile  README.md  environment.yml  plan.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
archive/: 02_features.ipynb  03_modelling.ipynb
data/processed/: clean_data.csv  dataset_with_features.pkl  meta_data.pkl  model_data.pkl  model_data.pq  splits.pkl  uk_final.csv  uk_final_formatted.csv
data/raw/: OECD.SDD.STES,DSD_STES@DF_CLI,+GBR.M.CCICP...AA....csv  boe_rate_changes.csv  gfk_consumer_confidence.csv  internetreferencetables.xlsx  retail-sales-index-time-series-v38-filtered-2025-08-05T21-21-08Z.csv  series-060825.csv  series-070825.csv  series-230925_GBPeffectivefx.csv  series-230925_cpi.csv  series-230925_onlineretailshare.csv  series-230925_rpi.csv
notebooks/: 01_eda.ipynb  01_import.ipynb  02_features.ipynb  03_b.ipynb  03_modelling.ipynb  03_modelling_old.ipynb  04_category_data_prep.ipynb  05_category_regimes.ipynb  06_category_forecasts.ipynb  07_aggregate_forecast.ipynb  metadata.json
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
src/: conformal.py  models.py
