[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "time-series-methods"
version = "0.1.0"
description = "UK FMCG demand forecasting using TabPFN, CatBoost, and SARIMAX with conformal prediction"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pandas>=2.2.0",
    "numpy",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "catboost",
    "tabpfn",
    "tabpfn-time-series",
    "statsmodels",
    "holidays",
    "ruptures",
    "scipy",
    "jupyter",
    "ipykernel",
    "pycatch22>=0.4.5",
    "tsfeatures>=0.4.5",
    "tsfresh>=0.21.1",
    "sktime>=0.39.0",
    "shapiq",
    "shap>=0.48.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
