[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "time-series-methods"
version = "0.1.0"
description = "UK e-commerce growth dynamics analysis using TabPFN time-series forecasting"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # Core data manipulation
    "pandas>=2.2.0",
    "numpy",
    # Visualization
    "matplotlib",
    "seaborn",
    # ML models
    "scikit-learn",
    "tabpfn-client",
    "tabpfn-time-series",
    "autogluon.timeseries",
    # Time series analysis
    "statsmodels",
    "sktime>=0.39.0",
    "ruptures",
    # Utilities
    "scipy",
    "python-dotenv",
    # Notebook environment
    "jupyter",
    "ipykernel",
]

[tool.setuptools]
packages = []  # This is a notebook-only project, no Python packages to install

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
